force-app/main/default/objects/zConversion__c/zConversion__c.object-meta.xml
<CustomObject>
    <label>zConversion</label>
    <nameField>
        <displayFormat>Z-{00000}</displayFormat>
        <label>zConversion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>zConversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>