force-app/main/default/objects/zConversion__c/fields/Parameter1__c.field-meta.xml
<CustomField>
    <fullName>Parameter1__c</fullName>
    <description>Parameter 1</description>
    <label>Parameter1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>